Fix Contact Spacing Issues
Fixed some spacing issues with the email/phone/address row on desktop, and removed some spacing on mobile that was not needed when displaying these items in a column.

--- a/sass/blocks/_profile.scss
+++ b/sass/blocks/_profile.scss
@@ -24,6 +24,7 @@
 				display: flex;
 				flex-direction: column;
 				height: 100%;
+				justify-content: space-between;
 				max-width: 85%;
 
 				.profile-name {
@@ -32,6 +33,13 @@
 
 				.profile-email-link {
 					word-break: break-all;
+				}
+
+				.profile-contact-row {
+					// Remove right margin used on the desktop version
+					&> div {
+						margin-right: 0;
+						}
 				}
 			}
 		}
@@ -96,8 +104,7 @@
 			// Row with email/phone/address.
 			.profile-contact-row {
 				display: flex;
-
-				// Adds right margin to the <div> containing all contact info.
+				// Adds right margin to child <div> elements in the contact row.
 				&> div {
 					margin-right: $uds-size-spacing-4;
 					}
